samples/_failures_safe/1761207253_bd9eba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71109cb7.c: In function ‘queue_dequeue’:
./samples/SAFE/__tmp_71109cb7.c:166:5: error: expected identifier at end of input
  166 |     if (!q || !q->
      |     ^~
./samples/SAFE/__tmp_71109cb7.c:166:5: error: expected declaration or statement at end of input
